--- a/package.json
+++ b/package.json
@@ -8,12 +8,34 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "latest",
+    "@react-native-community/masked-view": "^0.1.6",
+    "@react-navigation/drawer": "^5.4.1",
+    "@react-navigation/material-bottom-tabs": "^5.1.8",
+    "@react-navigation/native": "^5.1.5",
+    "@react-navigation/stack": "^5.2.10",
+    "@use-expo/font": "^2.0.0",
     "expo": "~37.0.3",
+    "expo-asset": "^8.1.4",
+    "expo-constants": "^9.0.0",
+    "expo-image-picker": "~8.1.0",
+    "expo-local-authentication": "~9.0.0",
+    "expo-localization": "~8.1.0",
+    "i18n-js": "^3.5.1",
+    "prop-types": "latest",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-paper": "^3.8.0",
+    "react-native-picker-select": "^7.0.0",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-web": "~0.11.7"
+    "react-native-svg": "^11.0.1",
+    "react-native-web": "~0.11.7",
+    "expo-facebook": "^8.1.0",
+    "expo-google-app-auth": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
