📒 Today I reached the palmistry feature, tomorrow is THE day!

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "latest",
+    "@react-native-community/datetimepicker": "2.3.2",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/drawer": "^5.4.1",
     "@react-navigation/material-bottom-tabs": "^5.1.8",
@@ -17,6 +18,7 @@
     "@use-expo/font": "^2.0.0",
     "expo": "~37.0.3",
     "expo-asset": "^8.1.4",
+    "expo-camera": "^8.2.0",
     "expo-constants": "^9.0.0",
     "expo-facebook": "^8.1.0",
     "expo-google-app-auth": "^8.1.0",
@@ -36,8 +38,7 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-svg": "^11.0.1",
-    "react-native-web": "~0.11.7",
-    "@react-native-community/datetimepicker": "2.2.2"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
