--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "latest",
-    "@react-native-community/datetimepicker": "2.3.2",
+    "@react-native-community/datetimepicker": "2.2.2",
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/drawer": "^5.4.1",
     "@react-navigation/material-bottom-tabs": "^5.1.8",
@@ -39,7 +39,8 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-svg": "^11.0.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-navigation-material-bottom-tabs": "^2.2.11"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
