😛 Nice and sunny day, most of screens base is done

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-camera": "^8.2.0",
     "expo-constants": "^9.0.0",
     "expo-facebook": "^8.1.0",
+    "expo-font": "^8.1.1",
     "expo-google-app-auth": "^8.1.0",
     "expo-image-picker": "~8.1.0",
     "expo-linear-gradient": "^8.1.0",
