😎 New Zodiac Signs and dark theme is darker

--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "latest",
+    "@expo/vector-icons": "^10.2.0",
     "@react-native-community/datetimepicker": "2.2.2",
     "@react-native-community/masked-view": "^0.1.6",
-    "@react-navigation/drawer": "^5.4.1",
-    "@react-navigation/material-bottom-tabs": "^5.1.8",
-    "@react-navigation/native": "^5.1.5",
-    "@react-navigation/stack": "^5.2.10",
+    "@react-navigation/bottom-tabs": "^5.4.2",
+    "@react-navigation/drawer": "^5.7.2",
+    "@react-navigation/material-bottom-tabs": "^5.2.2",
+    "@react-navigation/native": "^5.2.1",
+    "@react-navigation/stack": "^5.2.16",
     "@use-expo/font": "^2.0.0",
     "clarifai": "^2.9.1",
-    "expo": "~37.0.3",
+    "expo": "^37.0.9",
     "expo-asset": "^8.1.4",
     "expo-camera": "^8.2.0",
     "expo-constants": "^9.0.0",
@@ -35,17 +36,17 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-paper": "^3.8.0",
+    "react-native-paper": "^3.10.1",
     "react-native-picker-select": "^7.0.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-svg": "^11.0.1",
     "react-native-web": "~0.11.7",
-    "react-navigation-material-bottom-tabs": "^2.2.11"
+    "react-navigation-material-bottom-tabs": "^2.2.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "^7.9.6",
     "@types/react": "~16.9.23",
     "@types/react-native": "~0.61.17",
     "babel-preset-expo": "~8.1.0",
