👉 Im getting good at this shit

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.2.0",
+    "@expo/vector-icons": "^10.0.0",
     "@react-native-community/datetimepicker": "2.2.2",
-    "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.4.2",
     "@react-navigation/drawer": "^5.7.2",
     "@react-navigation/material-bottom-tabs": "^5.2.2",
@@ -18,22 +18,22 @@
     "@react-navigation/stack": "^5.2.16",
     "@use-expo/font": "^2.0.0",
     "clarifai": "^2.9.1",
-    "expo": "^37.0.9",
-    "expo-asset": "^8.1.4",
-    "expo-camera": "^8.2.0",
-    "expo-constants": "^9.0.0",
-    "expo-facebook": "^8.1.0",
-    "expo-font": "^8.1.1",
+    "expo": "^37.0.0",
+    "expo-asset": "~8.1.4",
+    "expo-camera": "~8.2.0",
+    "expo-constants": "~9.0.0",
+    "expo-facebook": "~8.1.0",
+    "expo-font": "~8.1.0",
     "expo-google-app-auth": "^8.1.0",
     "expo-image-picker": "~8.1.0",
-    "expo-linear-gradient": "^8.1.0",
+    "expo-linear-gradient": "~8.1.0",
     "expo-local-authentication": "~9.0.0",
     "expo-localization": "~8.1.0",
-    "expo-store-review": "^2.1.0",
+    "expo-store-review": "~2.1.0",
     "i18n-js": "^3.5.1",
     "prop-types": "latest",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.10.1",
@@ -41,16 +41,17 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
-    "react-native-svg": "^11.0.1",
-    "react-native-web": "~0.11.7",
-    "react-navigation-material-bottom-tabs": "^2.2.12"
+    "react-native-svg": "11.0.1",
+    "react-native-web": "^0.11.7",
+    "react-navigation-material-bottom-tabs": "^2.2.12",
+    "expo-blur": "~8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
-    "@types/react": "~16.9.23",
-    "@types/react-native": "~0.61.17",
-    "babel-preset-expo": "~8.1.0",
-    "typescript": "~3.8.3"
+    "@types/react": "^16.9.11",
+    "@types/react-native": "^0.60.22",
+    "babel-preset-expo": "^8.1.0",
+    "typescript": "^3.8.3"
   },
   "private": true
 }
