--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 node_modules/**/*
 .expo/*
+.expo-shared/*
 npm-debug.*
 *.jks
 *.p8
@@ -15,4 +16,7 @@ web-report/
 
 # credentials
 src/credentials/
+
+# ides
+.idea/*
 
