--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 node_modules/**/*
-.expo/*
+.expo
 .expo-shared/*
 npm-debug.*
 *.jks
@@ -18,5 +18,5 @@ web-report/
 src/credentials/
 
 # ides
-.idea/*
+.idea
 
