🧨 Upgraded to expo sdk 38.0.0

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ web-report/
 .DS_Store
 
 # credentials
-src/credentials/
+src/credentials/admob.js
 src/credentials/google-services.json
 
 # ides
