--- a/package.json
+++ b/package.json
@@ -9,56 +9,58 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.1.0",
     "@expo/vector-icons": "^10.0.0",
-    "@react-native-community/datetimepicker": "2.2.2",
-    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/datetimepicker": "2.4.0",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.4.2",
     "@react-navigation/drawer": "^5.7.2",
     "@react-navigation/material-bottom-tabs": "^5.2.2",
     "@react-navigation/native": "^5.2.1",
-    "@react-navigation/stack": "^5.2.16",
+    "@react-navigation/stack": "^5.6.2",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@use-expo/font": "^2.0.0",
     "clarifai": "^2.9.1",
     "eslint": "^7.0.0",
     "eslint-config-universe": "^3.0.0",
-    "expo": "^37.0.0",
-    "expo-asset": "~8.1.4",
-    "expo-blur": "~8.1.0",
-    "expo-camera": "~8.2.0",
-    "expo-constants": "~9.0.0",
-    "expo-facebook": "~8.1.0",
-    "expo-font": "~8.1.0",
+    "expo": "^38.0.0",
+    "expo-ads-admob": "~8.2.1",
+    "expo-asset": "~8.1.7",
+    "expo-blur": "~8.1.2",
+    "expo-camera": "~8.3.1",
+    "expo-constants": "~9.1.1",
+    "expo-facebook": "~8.2.1",
+    "expo-file-system": "~9.0.1",
+    "expo-font": "~8.2.1",
     "expo-google-app-auth": "^8.1.0",
-    "expo-image-picker": "~8.1.0",
-    "expo-linear-gradient": "~8.1.0",
-    "expo-local-authentication": "~9.0.0",
-    "expo-localization": "~8.1.0",
-    "expo-store-review": "~2.1.0",
+    "expo-image-picker": "~8.3.0",
+    "expo-linear-gradient": "~8.2.1",
+    "expo-local-authentication": "~9.1.1",
+    "expo-localization": "~8.2.1",
+    "expo-store-review": "~2.1.2",
     "i18n-js": "^3.5.1",
     "prettier": "^2.0.5",
     "prop-types": "latest",
-    "react": "16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.10.1",
     "react-native-picker-select": "^7.0.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
-    "react-native-svg": "11.0.1",
-    "react-native-web": "^0.11.7",
-    "react-navigation-material-bottom-tabs": "^2.2.12",
-    "expo-ads-admob": "~8.1.0"
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "3.0.2",
+    "react-native-screens": "~2.9.0",
+    "react-native-svg": "12.1.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation-material-bottom-tabs": "^2.2.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
-    "@types/react": "^16.9.11",
-    "@types/react-native": "^0.60.22",
-    "babel-preset-expo": "^8.1.0",
-    "typescript": "^3.8.3"
+    "@types/react": "~16.9.41",
+    "@types/react-native": "~0.62.13",
+    "babel-preset-expo": "^8.2.3",
+    "typescript": "~3.9.5"
   },
   "eslintConfig": {
     "extends": "universe/native"
