--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-native-paper": "^3.10.1",
     "react-native-picker-select": "^7.0.0",
     "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "3.0.2",
+    "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
