--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "^1.10.1",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^3.10.1",
     "react-native-picker-select": "^7.0.0",
     "react-native-safe-area-context": "3.1.9",
