--- a/package.json
+++ b/package.json
@@ -13,34 +13,34 @@
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/datetimepicker": "3.0.4",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.4.2",
-    "@react-navigation/drawer": "^5.7.2",
-    "@react-navigation/material-bottom-tabs": "^5.2.2",
-    "@react-navigation/native": "^5.2.1",
-    "@react-navigation/stack": "^5.6.2",
+    "@react-navigation/bottom-tabs": "^5.11.8",
+    "@react-navigation/core": "^5.15.2",
+    "@react-navigation/drawer": "^5.12.4",
+    "@react-navigation/material-bottom-tabs": "^5.3.14",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "@use-expo/font": "^2.0.0",
     "expo": "^40.0.1",
     "expo-app-loading": "^1.0.1",
     "expo-asset": "~8.2.1",
     "expo-blur": "~8.2.2",
     "expo-camera": "~9.1.0",
-    "expo-constants": "~9.3.3",
+    "expo-constants": "^9.3.3",
     "expo-linear-gradient": "~8.4.0",
     "expo-local-authentication": "~9.5.0",
     "expo-localization": "~9.1.0",
     "expo-store-review": "~2.3.0",
-    "i18n-js": "^3.5.1",
+    "i18n-js": "^3.8.0",
     "prop-types": "^15.7.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^3.10.1",
     "react-native-picker-select": "^7.0.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
-    "react-native-svg": "12.1.0",
-    "react-navigation-material-bottom-tabs": "^2.2.12"
+    "react-native-svg": "12.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
@@ -51,10 +51,14 @@
     "babel-preset-expo": "8.3.0",
     "eslint": "^7.0.0",
     "eslint-config-universe": "^3.0.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.0.5",
     "typescript": "~4.0.0"
   },
   "eslintConfig": {
-    "extends": "universe/native"
+    "extends": [
+      "universe/native",
+      "plugin:react-hooks/recommended"
+    ]
   }
 }
