--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
+    "@types/expo-localization": "^3.0.0",
+    "@types/i18n-js": "^3.8.0",
+    "@types/react": "^17.0.3",
+    "@types/react-native": "^0.64.2",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "babel-preset-expo": "8.3.0",
