--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "astrale",
+  "version": "1.0.0",
   "private": false,
   "scripts": {
     "start": "expo start",
@@ -10,8 +11,9 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@expo/vector-icons": "^12.0.0",
-    "@react-native-community/datetimepicker": "3.0.4",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/core": "^5.15.2",
@@ -20,42 +22,43 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "@use-expo/font": "^2.0.0",
-    "expo": "^40.0.1",
-    "expo-app-loading": "^1.0.1",
-    "expo-asset": "~8.2.1",
-    "expo-blur": "~8.2.2",
-    "expo-camera": "~9.1.0",
-    "expo-constants": "^9.3.3",
-    "expo-linear-gradient": "~8.4.0",
-    "expo-local-authentication": "~9.5.0",
-    "expo-localization": "~9.1.0",
-    "expo-store-review": "~2.3.0",
+    "expo": "^45.0.6",
+    "expo-app-loading": "~2.0.0",
+    "expo-asset": "~8.5.0",
+    "expo-blur": "~11.1.0",
+    "expo-camera": "~12.2.0",
+    "expo-constants": "~13.1.1",
+    "expo-linear-gradient": "~11.3.0",
+    "expo-linking": "^3.1.0",
+    "expo-local-authentication": "~12.2.0",
+    "expo-store-review": "~5.2.0",
+    "expo-notifications": "^0.15.4",
     "i18n-js": "^3.8.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-gesture-handler": "~1.8.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-paper": "^3.10.1",
     "react-native-picker-select": "^7.0.0",
-    "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
-    "react-native-svg": "12.1.0"
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-svg": "12.3.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "^7.12.9",
     "@types/expo-localization": "^3.0.0",
     "@types/i18n-js": "^3.8.0",
-    "@types/react": "^17.0.3",
-    "@types/react-native": "^0.64.2",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "babel-preset-expo": "8.3.0",
+    "babel-preset-expo": "~9.1.0",
     "eslint": "^7.0.0",
     "eslint-config-universe": "^3.0.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.0.5",
-    "typescript": "~4.0.0"
+    "typescript": "~4.3.5"
   },
   "eslintConfig": {
     "extends": [
